Fix screens visibility

--- a/source/sass/modules/_screens.scss
+++ b/source/sass/modules/_screens.scss
@@ -4,7 +4,7 @@
 // Transition mixins for .screen
 @mixin screen-transition($delay: 0s) {
   animation-delay: $delay;
-  transition: visibility 0s ($duration + $delay) $ease;
+  transition: visibility 0s ($duration-two + $delay) $ease;
 }
 @mixin screen-transition-active($delay: 0s) {
   animation-delay: $delay;
@@ -13,6 +13,7 @@
 .screen {
   @include cover(fixed);
   z-index: $z-layer-infront;
+  visibility: hidden;
   @include screen-transition();
 
   &__inner {
